--- a/css/style.css
+++ b/css/style.css
@@ -14,8 +14,8 @@
 --------------------*/
 
 body {
-	margin: 0px;
-	font-family: "Raleway", Sans-serif;
+    margin: 0px;
+    font-family: "Raleway", Sans-serif;
     background-color: #ffffff;
 }
 
@@ -25,25 +25,33 @@ h3,
 h4,
 h5,
 h6 {
-	font-weight: 200;
-	letter-spacing: 0.4px;
-	font-family: "Raleway", Sans-serif;
-	color: #000000;
+    font-weight: 200;
+    letter-spacing: 0.4px;
+    font-family: "Raleway", Sans-serif;
+    color: #000000;
 }
 
 p {
-	font-family: 'Raleway', sans-serif;
-	font-size: 17px;
-	font-weight: 300;
-	line-height: 28px;
-	letter-spacing: 0.2px;
-	color: #000000;
+    font-family: 'Raleway', sans-serif;
+    font-size: 17px;
+    font-weight: 300;
+    line-height: 28px;
+    letter-spacing: 0.2px;
+    color: #000000;
 }
 
-a:hover, a:focus, a:active, a.active {
+a:hover,
+a:focus,
+a:active,
+a.active {
     color: #ffffff;
 }
-a, a:hover, a:focus, a:active, a.active {
+
+a,
+a:hover,
+a:focus,
+a:active,
+a.active {
     outline: 0;
 }
 
@@ -53,16 +61,18 @@ a, a:hover, a:focus, a:active, a.active {
 }
 
 @media (min-width: 768px) {
-	section {
-	    padding: 150px 0;
-	}
+    section {
+        padding: 150px 0;
+    }
 }
-.logoA{
+
+.logoA {
     width: 80px;
     height: 80px;
 }
+
 section {
-	padding: 35px 0 60px;
+    padding: 35px 0 60px;
 }
 
 /*--------------------
@@ -75,8 +85,8 @@ section {
 }
 
 .col-0-gutter {
-	padding-left: 0;
-	padding-right: 0;
+    padding-left: 0;
+    padding-right: 0;
 }
 
 /*--------------------
@@ -84,88 +94,129 @@ section {
 --------------------*/
 
 .navbar-default {
-	background-color: #ffffff;
-	border-color: transparent
+    background-color: #ffffff;
+    border-color: transparent
 }
+
 .navbar-default .navbar-brand {
-	color: #fff;
+    color: #fff;
     padding: 5px;
 }
-.navbar-default .navbar-brand:hover,.navbar-default .navbar-brand:focus,.navbar-default .navbar-brand:active,.navbar-default .navbar-brand.active {
-	color: #fec503
+
+.navbar-default .navbar-brand:hover,
+.navbar-default .navbar-brand:focus,
+.navbar-default .navbar-brand:active,
+.navbar-default .navbar-brand.active {
+    color: #fec503
 }
+
 .navbar-default .navbar-collapse {
-	border-color: rgba(255,255,255,.02)
+    border-color: rgba(255, 255, 255, .02)
 }
+
 .navbar-default .navbar-toggle {
-	background-color: #fed136;
-	border-color: #fed136
+    background-color: #fed136;
+    border-color: #fed136
 }
+
 .navbar-default .navbar-toggle .icon-bar {
-	background-color: rgb(175, 58, 58)
+    background-color: rgb(175, 58, 58)
 }
-.navbar-default .navbar-toggle:hover,.navbar-default .navbar-toggle:focus {
-	background-color: #fed136
+
+.navbar-default .navbar-toggle:hover,
+.navbar-default .navbar-toggle:focus {
+    background-color: #fed136
 }
+
 .navbar-default .nav li a {
-    font-family: "Roboto",sans-serif;
+    font-family: "Roboto", sans-serif;
     text-transform: uppercase;
     font-size: 13px;
     font-weight: 400;
     letter-spacing: 2px;
-    color: #000;
-    border-bottom: 1px solid;
-    border-color: #000;
+    color: #222323;
+    border-bottom: 2px solid;
+    border-color: #5a1522;
     margin: 10px 15px;
     padding: 0 0 2px 0;
+    text-align: center;
 }
-.navbar-default 
-.navbar-default .nav li a:hover,.navbar-default .nav li a:focus {
-	border-color: #991919;
-	outline: 0
-}
-.navbar-default .page-scroll img{
+@media (max-width: 764px) {
+    .navbar-default .nav li a{
+        border: none;
+        text-align: start;
 
-    width: 350px;
-    height: 350px;
+    }
+
 }
+
+.navbar-default .navbar-default .nav li a:hover,
+.navbar-default .nav li a:focus {
+    border-color: #000;
+    outline: 0
+}
+
+.navbar-default .page-scroll img {
+    position: absolute;
+    top: 0;
+    width: 150px;
+    height: 150px;
+}
+@media (max-width:768px){
+    .navbar-default .page-scroll img {
+        position: absolute;
+        top: 0;
+        left: 20%;
+        width: 250px;
+        height: 250px;
+    }
+}
+
 .navbar-default .navbar-nav>.active>a {
-	border-radius: 0;
-	color: #fff;
-	background-color: #fed136
+    border-radius: 0;
+    color: #fff;
+    background-color: #fed136
 }
-.navbar-default .navbar-nav>.active>a:hover,.navbar-default .navbar-nav>.active>a:focus {
-	color: #fff;
-	background-color: #fec503
+
+.navbar-default .navbar-nav>.active>a:hover,
+.navbar-default .navbar-nav>.active>a:focus {
+    color: #fff;
+    background-color: #fec503
 }
 
 @media (min-width:768px) {
-	.navbar-default
-	{
-		background-color: transparent;
-		padding: 40px 0 0px;
-    	-webkit-transition:padding .3s;
-		-moz-transition:padding .3s;
-		transition:padding .3s;
-		border:0
-	}
-	.navbar-default .navbar-brand {
-		font-size: 2em;
-		-webkit-transition:all .3s;
-		-moz-transition:all .3s;
-		transition:all .3s;
+    .navbar-default {
+        background-color: transparent;
+        padding: 40px 0 0px;
+        -webkit-transition: padding .3s;
+        -moz-transition: padding .3s;
+        transition: padding .3s;
+        border: 0;
+    }
+
+    .navbar-default .navbar-brand {
+        font-size: 2em;
+        -webkit-transition: all .3s;
+        -moz-transition: all .3s;
+        transition: all .3s;
         padding: 0px;
-	}
-	.navbar-default .navbar-nav>.active>a {
-		border-radius: 3px
-	}
-	.navbar-default.navbar-shrink {
-		background-color: #222;
-		padding: 10px 0
-	}
+        
+    }
+
+    .navbar-default .navbar-nav>.active>a {
+        border-radius: 3px;
+        
+    }
+
+    .navbar-default.navbar-shrink {
+        background-color: #222;
+        padding: 10px 0
+    }
+
     .navbar-nav>li>a {
         padding-top: 15px;
         padding-bottom: 4px;
+        
     }
 }
 
@@ -174,19 +225,19 @@ section {
 --------------------*/
 
 .section-title {
-	padding-bottom: 30px;
+    padding-bottom: 30px;
 }
 
 .section-title h2 {
-	font-size: 45px;
-	text-transform: uppercase;
+    font-size: 45px;
+    text-transform: uppercase;
 }
 
 .section-title p {
-	font-size: 18px;
-	font-weight: 300;
-	line-height: 33px;
-	margin: 25px 100px 30px 100px;
+    font-size: 18px;
+    font-weight: 300;
+    line-height: 33px;
+    margin: 25px 100px 30px 100px;
 }
 
 .mz-module .section-title {
@@ -202,7 +253,7 @@ section {
 }
 
 .mz-module-about {
-	padding: 20px;
+    padding: 20px;
 }
 
 .mz-about-default {
@@ -214,26 +265,26 @@ section {
 }
 
 .mz-module-about h3 {
-font-weight: 700;
+    font-weight: 700;
     font-size: 13px;
     text-transform: uppercase;
     color: #FFFFFF;
     letter-spacing: 2px;
     margin-bottom: 30px;
-    }
+}
 
 .mz-module-about p {
-	font-size: 14px;
-	font-weight: 400;
-	line-height: 27px;
-	color: #9C9C9C;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 27px;
+    color: #9C9C9C;
 }
 
 .ot-circle {
-	text-align: center;
-	color: #E8E8E8;
-	margin: 40px 0;
-	font-size: 37px;
+    text-align: center;
+    color: #E8E8E8;
+    margin: 40px 0;
+    font-size: 37px;
 }
 
 /*--------------------
@@ -245,11 +296,11 @@ font-weight: 700;
 }
 
 .skillbar-item {
-    margin-bottom: 30px;    
+    margin-bottom: 30px;
 }
 
 .skillbar-item:last-child {
-    margin-bottom: 60px;    
+    margin-bottom: 60px;
 }
 
 .skillbar {
@@ -272,7 +323,7 @@ font-weight: 700;
     font-size: 13px;
     text-transform: uppercase;
     color: #3A3A3A;
-    letter-spacing: 2px;    
+    letter-spacing: 2px;
     margin: 0;
     padding: 0 0 12px 0;
 }
@@ -292,12 +343,12 @@ font-weight: 700;
 --------------------*/
 
 figure {
-	position: relative;
+    position: relative;
     overflow: hidden;
     margin: 0 1px 1px 0;
     background: #726FB9;
     text-align: center;
-    cursor: pointer;	
+    cursor: pointer;
 }
 
 figcaption {
@@ -305,17 +356,19 @@ figcaption {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;	
+    height: 100%;
 }
 
-.ot-portfolio-item figure figcaption > a {
+.ot-portfolio-item figure figcaption>a {
     z-index: 1000;
     text-indent: 200%;
     white-space: nowrap;
     font-size: 0;
     opacity: 0;
 }
-.ot-portfolio-item figure figcaption, .ot-portfolio-item figure figcaption > a {
+
+.ot-portfolio-item figure figcaption,
+.ot-portfolio-item figure figcaption>a {
     position: absolute;
     top: 0;
     left: 0;
@@ -324,45 +377,45 @@ figcaption {
 }
 
 figure.effect-bubba {
-	background: #000;
-	margin-bottom: 1px;
+    background: #000;
+    margin-bottom: 1px;
 }
 
 figure.effect-bubba img {
-	opacity: 0.8;
-	-webkit-transition: opacity 0.35s;
-	transition: opacity 0.35s;
+    opacity: 0.8;
+    -webkit-transition: opacity 0.35s;
+    transition: opacity 0.35s;
 }
 
 figure.effect-bubba:hover img {
-	opacity: 0.4;
+    opacity: 0.4;
 }
 
 figure.effect-bubba figcaption::before,
 figure.effect-bubba figcaption::after {
-	position: absolute;
-	top: 30px;
-	right: 30px;
-	bottom: 30px;
-	left: 30px;
-	content: '';
-	opacity: 0;
-	-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
-	transition: opacity 0.35s, transform 0.35s;
+    position: absolute;
+    top: 30px;
+    right: 30px;
+    bottom: 30px;
+    left: 30px;
+    content: '';
+    opacity: 0;
+    -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+    transition: opacity 0.35s, transform 0.35s;
 }
 
 figure.effect-bubba figcaption::before {
-	border-top: 1px solid #fff;
-	border-bottom: 1px solid #fff;
-	-webkit-transform: scale(0,1);
-	transform: scale(0,1);
+    border-top: 1px solid #fff;
+    border-bottom: 1px solid #fff;
+    -webkit-transform: scale(0, 1);
+    transform: scale(0, 1);
 }
 
 figure.effect-bubba figcaption::after {
-	border-right: 1px solid #fff;
-	border-left: 1px solid #fff;
-	-webkit-transform: scale(1,0);
-	transform: scale(1,0);
+    border-right: 1px solid #fff;
+    border-left: 1px solid #fff;
+    -webkit-transform: scale(1, 0);
+    transform: scale(1, 0);
 }
 
 figure.effect-bubba h2 {
@@ -370,37 +423,37 @@ figure.effect-bubba h2 {
     font-size: 15px;
     font-weight: 700;
     text-transform: uppercase;
-	padding-top: 30%;
-	-webkit-transition: -webkit-transform 0.35s;
-	transition: transform 0.35s;
-	-webkit-transform: translate3d(0,-20px,0);
-	transform: translate3d(0,-20px,0);
+    padding-top: 30%;
+    -webkit-transition: -webkit-transform 0.35s;
+    transition: transform 0.35s;
+    -webkit-transform: translate3d(0, -20px, 0);
+    transform: translate3d(0, -20px, 0);
 }
 
 figure.effect-bubba p {
     color: #fff;
     font-size: 13px;
     font-weight: 500;
-	padding: 20px 2.5em;
-	opacity: 0;
-	-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
-	transition: opacity 0.35s, transform 0.35s;
-	-webkit-transform: translate3d(0,20px,0);
-	transform: translate3d(0,20px,0);
+    padding: 20px 2.5em;
+    opacity: 0;
+    -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+    transition: opacity 0.35s, transform 0.35s;
+    -webkit-transform: translate3d(0, 20px, 0);
+    transform: translate3d(0, 20px, 0);
 }
 
 figure.effect-bubba:hover figcaption::before,
 figure.effect-bubba:hover figcaption::after {
-	opacity: 1;
-	-webkit-transform: scale(1);
-	transform: scale(1);
+    opacity: 1;
+    -webkit-transform: scale(1);
+    transform: scale(1);
 }
 
 figure.effect-bubba:hover h2,
 figure.effect-bubba:hover p {
-	opacity: 1;
-	-webkit-transform: translate3d(0,0,0);
-	transform: translate3d(0,0,0);
+    opacity: 1;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
 }
 
 /*--------------------
@@ -416,24 +469,24 @@ figure.effect-bubba:hover p {
 --------------------*/
 
 .intro-section {
-	padding: 60px 0 0 0;
-	margin: 0;
+    padding: 60px 0 0 0;
+    margin: 0;
 }
 
 .intro-section .section-title {
-/*	padding: 0px 85px; */
-	text-align: justify;	
+    /*	padding: 0px 85px; */
+    text-align: justify;
 }
 
 .intro-section p {
-	font-size: 14px;
-	color: #6B6B6B;
-	font-weight: 500;
-	line-height: 32px;
-	padding: 47px;
-	font-family: "Raleway";
-	margin: 0;
-	background-color: #F9F9F9;
+    font-size: 14px;
+    color: #6B6B6B;
+    font-weight: 500;
+    line-height: 32px;
+    padding: 47px;
+    font-family: "Raleway";
+    margin: 0;
+    background-color: #F9F9F9;
 }
 
 /*--------------------
@@ -446,25 +499,25 @@ figure.effect-bubba:hover p {
 }
 
 .team-item h3 {
-font-size: 25px;
+    font-size: 25px;
     font-weight: 300;
     margin: 30px 0 20px;
     text-transform: uppercase;
 }
 
 .team-item .team-position {
-color: #565656;
+    color: #565656;
     font-size: 12px;
     text-transform: uppercase;
     font-weight: 500;
 }
 
 .team-item p {
-	font-size: 13px;
-	font-weight: 500;
-	color: #848484;
-	padding: 18px 30px 35px 30px;
-	line-height: 24px;
+    font-size: 13px;
+    font-weight: 500;
+    color: #848484;
+    padding: 18px 30px 35px 30px;
+    line-height: 24px;
 }
 
 /*--------------------
@@ -477,15 +530,16 @@ section#contact form {
 }
 
 section#contact.form-group {
-margin-bottom: 25px;
+    margin-bottom: 25px;
 }
 
-section#contact .form-group input, section#contact .form-group textarea {
+section#contact .form-group input,
+section#contact .form-group textarea {
     padding: 15px;
     border: 1px solid #BBBBBB;
     border-radius: 0;
-    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
-    box-shadow: inset 0 0px 0px rgba(0,0,0,.075);
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+    box-shadow: inset 0 0px 0px rgba(0, 0, 0, .075);
     font-size: 13px;
 }
 
@@ -512,7 +566,7 @@ section#contact .form-group input, section#contact .form-group textarea {
 
 footer {
     padding: 30px;
-    background-color: #000;    
+    background-color: #000;
 }
 
 footer p {
@@ -540,27 +594,29 @@ footer p a span {
 --------------------*/
 
 .modal-content {
-	border-radius: 0;	
+    border-radius: 0;
 }
+
 .modal-header .close {
-	font-size: 30px;	
+    font-size: 30px;
 }
-.modal-title {    
-	text-transform: uppercase;
-	font-size: 23px;
+
+.modal-title {
+    text-transform: uppercase;
+    font-size: 23px;
 }
 
 .modal-body {
-	padding: 0;
+    padding: 0;
 }
 
 .modal-body p {
-	margin: 30px 20px;
-	color: #2D2D2D;		
+    margin: 30px 20px;
+    color: #2D2D2D;
 }
 
 .modal-works {
-font-size: 11px;
+    font-size: 11px;
     letter-spacing: 1px;
     text-transform: uppercase;
     font-weight: 500;
@@ -569,7 +625,7 @@ font-size: 11px;
 }
 
 .modal-works span {
-	background-color: #FED136;
+    background-color: #FED136;
     margin-right: 15px;
     padding: 5px 10px;
 }
@@ -578,13 +634,21 @@ font-size: 11px;
 7. Components
 --------------------*/
 
-.btn-xl:hover, .btn-xl:focus, .btn-xl:active, .btn-xl.active, .open .dropdown-toggle.btn-xl {
+.btn-xl:hover,
+.btn-xl:focus,
+.btn-xl:active,
+.btn-xl.active,
+.open .dropdown-toggle.btn-xl {
     color: #fff;
     background-color: #fec503;
     border-color: #f6bf01;
 }
 
-.btn:hover, .btn:focus, .btn:active, .btn.active, .open .dropdown-toggle.btn {
+.btn:hover,
+.btn:focus,
+.btn:active,
+.btn.active,
+.open .dropdown-toggle.btn {
     color: #fff;
     background-color: #fec503;
     border-color: #f6bf01;
@@ -614,9 +678,9 @@ font-size: 11px;
 
 .btn-xl {
     color: #fff;
-     background-color: #726FB9;
+    background-color: #726FB9;
     border-color: #726FB9;
-    font-family: "Robot",sans-serif;
+    font-family: "Robot", sans-serif;
     text-transform: uppercase;
     font-weight: 700;
     border-radius: 3px;
@@ -632,6 +696,7 @@ font-size: 11px;
     bottom: 40px;
     right: 50px;
 }
+
 #back-top a {
     width: 60px;
     height: 60px;
@@ -647,29 +712,31 @@ font-size: 11px;
     -moz-transition: 1s;
     transition: 1s;
 }
+
 #back-top a:hover {
     background: #fed136;
 }
+
 /* arrow icon (span tag) */
 #back-top i {
     margin-top: 15px;
     font-size: 28px;
 }
 
-@media only screen
-and (min-width : 320px)
-and (max-width : 480px) {
-#back-top {
-    position: fixed;
-    bottom: 10px;
-    right: 30px;
-}
-#back-top a {
-    width: 40px;
-    height: 40px;
-}
-#back-top i {
-    margin-top: 7px;
-    font-size: 20px;
-}
+@media only screen and (min-width : 320px) and (max-width : 480px) {
+    #back-top {
+        position: fixed;
+        bottom: 10px;
+        right: 30px;
+    }
+
+    #back-top a {
+        width: 40px;
+        height: 40px;
+    }
+
+    #back-top i {
+        margin-top: 7px;
+        font-size: 20px;
+    }
 }
