--- a/aladdin.css
+++ b/aladdin.css
@@ -16,8 +16,8 @@ body {
   justify-items: center;
 }
 .logo a img {
-  width: 90px;
-  height: 80px;
+  width: 15px;
+  height: 15px;
   margin: 0 25px;
 }
 
@@ -34,9 +34,10 @@ nav {
   padding: 10px;
 }
 .barra ul li {
-  display: inline-block;
+  
   padding: 20px;
-  color: rgb(0, 0, 0);
+  color: black;
+  display: inline-block;
 }
 .barra ul :hover {
     color: rgba(8, 82, 219, 0.493);
